--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --cor-destaque: #ED145B;
-    --cor-gradiente-preto: linear-gradient(113deg, #000 0%, #1E2021 44.96%, #1E2022 100%);
+    --cor-destaque: #ebac39;
+    --cor-gradiente-preto: linear-gradient(113deg, #000000 0%, #1E2021 44.96%, #1E2022 100%);
 }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: Montserrat;
+    font-family: Sᴍᴀʟʟ Cᴀᴘs;
 }
 
 body {
@@ -67,7 +67,7 @@ h1 {
     border-radius: 0.5rem;
     border: none;
     background: var(--cor-destaque);
-    color: #000;
+    color: #973008;
     font-size: 2.5rem;
     font-weight: 500;
     line-height: normal;
