--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 16px 21px 18px 21px;
-    background: var(--cor-gradiente-bege);
+    background: var(--cor-gradiente-preto);
     height: 100vh;
     flex-direction: column;
 }
